@@ -45,6 +45,7 @@ Unsupported mixes:
 
 ## Change Log
 
+- **v0.62.5** – Logged that Raylib now caches its original WGL handles and only reacquires the context on demand so single-backend builds no longer fail to activate the GL context.
 - **v0.62.4** – Recorded that Raylib now seeds its fitted viewport from the live framebuffer during creation so docked GUIs align immediately.
 - **v0.62.3** – Noted the Raylib viewport scissor fix and the idempotent software renderer cleanup.
 - **v0.62.2** – Clarified that forcing the updater also downloads and expands the source tree so release binaries can bootstrap local development without a fresh clone.
