@@ -195,4 +195,5 @@
 - Seeded Raylib's viewport metrics during resize dispatch so atlas menus stay centred from the very first frame, documented the release, and bumped the engine version to v0.62.2.
 - Added a scissor pass to Raylib's fitted viewport so GUI sprites stay clipped, made the software renderer cleanup idempotent to stop duplicate shutdown logs, documented the release, and bumped the engine version to v0.62.3.
 - Re-seeded Raylib's fitted viewport from the live framebuffer during context creation so GUI overlays align before docking completes, documented the change, and bumped the engine version to v0.62.4.
+- Cached Raylib's bootstrapped WGL handles and gated context reacquisition so standalone sessions can make the GL context current reliably, documented the change, and bumped the engine version to v0.62.5.
 
